# C_GameOfLife

./: .gitignore  CMakeLists.txt  README.md  gameRules.c  gameUI.c  gameUtils.h  main  main.c  shell.nix
src/: game.c  game.h  main.c  tui.c  tui.h
